# JWST-Classifier

./: .gitignore  README.md  pyproject.toml
notebooks/: 01_data_pipeline.ipynb  02_source_detection.ipynb  03_classification.ipynb  04_visualization.ipynb
src/: classify.py  detect.py  download.py  preprocess.py  visualize.py
